--- a/App-Harvest-API.csproj
+++ b/App-Harvest-API.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
     <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
     <PackageReference Include="MongoDB.Bson" Version="2.19.0"/>
+    <PackageReference Include="MongoDB.Driver.GridFS" Version="2.19.0"/>
   </ItemGroup>
 
 </Project>
